# holoflow

./: .cz.toml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
benchmarks/batched_spsc_queue/: CMakeLists.txt  benchmarks.cc
cmake/: CommonCMakeFunctions.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/batched_spsc_queue/: CMakeLists.txt  example.cc
examples/holoflow/: CMakeLists.txt
examples/holoflow/tensor/: example.cc
include/batched_spsc_queue/: batched_spsc_queue.hh
include/holoflow/tensor/: descriptor.hh  tensor.hh
src/batched_spsc_queue/: CMakeLists.txt  batched_spsc_queue.cc
src/holoflow/: CMakeLists.txt
src/holoflow/tensor/: descriptor.cc  tensor.cc
tests/batched_spsc_queue/: CMakeLists.txt  capacity_tests.cc  multithread_tests.cc
tests/holoflow/: CMakeLists.txt
tests/holoflow/tensor/: descriptor_tests.cc  tensor_tests.cc
